fix margin on mobile

--- a/src/blocks/modules/faq/index.scss
+++ b/src/blocks/modules/faq/index.scss
@@ -142,6 +142,8 @@
   }
 
   @include tab {
+    margin-bottom: 3.9rem;
+
     &__title {
       font-size: 1.8rem;
       text-align: left;
